--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^5.1.0",
+    "selfsigned": "^3.0.1",
     "ws": "^8.18.3"
   },
   "devDependencies": {
