--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "express": "^5.1.0",
+    "open": "^10.2.0",
     "selfsigned": "^3.0.1",
     "ws": "^8.18.3"
   },
